[metadata]
name = EpiHeader
version = 0.0.1
author = drawbu
description = Epitech header generator
platform = unix, linux

[options]
include_package_data = True
packages =
    EpiHeader
python_requires = >=3.10
package_dir =
    = .
zip_safe = no

[options.entry_points]
console_scripts =
    EpiHeader = EpiHeader.main:main
